force-app/main/default/objects/Trailhead_Data__c/Trailhead_Data__c.object-meta.xml
<CustomObject>
    <label>Trailhead Data</label>
    <pluralLabel>Trailhead Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <displayFormat>TH-{0000}</displayFormat>
        <label>Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>