force-app/main/default/objects/Trailhead_Data__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <type>Text</type>
    <length>100</length>
</CustomField>