force-app/main/default/objects/Trailhead_Data__c/fields/Superbadges__c.field-meta.xml
<CustomField>
    <fullName>Superbadges__c</fullName>
    <label>Superbadges</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>