force-app/main/default/objects/Trailhead_Data__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <label>Total Points</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>